--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@headlessui/react": "^2.2.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-select": "^5.8.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
